# manning-anomaly-detection-1

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
