[tool.poetry]
name = "anomaly-detaction"
version = "0.1.0"
description = ""
authors = ["Romeo Disca <romeo.disca@gmail.com>"]
license = "CC BY-NC 4.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
