[tool.poetry]
name = "anomaly-detaction"
version = "0.1.0"
description = ""
authors = ["Romeo Disca <romeo.disca@gmail.com>"]
license = "CC BY-NC 4.0"

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^2.0.4"
SciPy = "^1.11.4"
scikit-learn = "^1.3.2"
pyod = "^1.1.2"
pytest = "^7.4.4"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
flake8 = "^6.1.0"
statsmodels = "^0.14.1"
pandas = "^2.1.4"
PyQt6 = "^6.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
